--- a/main.html
+++ b/main.html
@@ -10,6 +10,15 @@
 	<script>
 		function secondHighest(arr) {
 			//Write your code here
+			if(arr.length<2) return -Infinity;
+
+			const unique = [...new Set(arr)];
+
+			if(unique.length<2) return -Infinity;
+
+			unique.sort((a, b)=> b-a);
+
+			return unique[1];
 			
 		}
 
@@ -19,7 +28,8 @@
 			for (var i = 0; i < n; i++) {
 				arr[i] = prompt("Enter element " + (i+1));
 			}
-			alert(secondHighest(arr));
+			 alert(secondHighest(arr));
+		
 		}
 		Main();
 	</script>
